Fix issue with fig caption alignment on mobile overlay

--- a/src/styles/endowment-overrides.scss
+++ b/src/styles/endowment-overrides.scss
@@ -991,11 +991,21 @@ body.single-wmf-report.wikimedia-endow:not(.home) {
 			display: block;
 			border-bottom-right-radius: none;
 
+			figcaption {
+				padding-left: 1rem;
+				padding-right: 1rem;
+			}
+
 			@media only screen and (min-width: 782px) {
 				margin-left: auto;
 				margin-right: auto;
 				width: 100%;
 				display: block !important;
+
+				figcaption {
+					padding-left: 0;
+					padding-right: 0;
+				}
 			}
 
 			@media only screen and (min-width: #{ $width-breakpoint-wide + 64 }) {
